[B]Version 1.1.134[/B]
- spankbang - domain changed to spankbang.party
